gcc/testsuite/gdc.test/compilable/test12567a.d
// REQUIRED_ARGS:
// PERMUTE_ARGS:
deprecated
module test12567a;

void main() {}
